# 1.4.5

* When using the pretty HTML writer, don't format HTML inside pre elements.

# 1.4.4

* Parse paragraph indents.

* Read part paths using relationships. This improves support for documents
  created by Word Online.

# 1.4.3

* Add style mapping for small caps.

* Add style mapping for tables.

# 1.4.2

* Read children of v:group elements.

# 1.4.1

* Read w:noBreakHyphen elements as non-breaking hyphen characters.

# 1.4.0

* Extract the default data URI image converter to the images module.

* Add anchor on hyperlinks as fragment if present.

* Convert target frames on hyperlinks to targets on anchors.

* Detect header rows in tables and convert to thead > tr > th.

# 1.3.6

* Handle complex fields that do not have a "separate" fldChar.

# 1.3.5

* Add transforms.run.

# 1.3.4

* Read children of w:object elements.

# 1.3.3

* Handle hyperlinks created with complex fields.

# 1.3.2

* Handle absolute paths within zip files. This should fix an issue where some
  images within a document couldn't be found.

# 1.3.1

* Add getDescendants() and getDescendantsOfType() to transforms module.

* Add font property to runs.

# 1.3.0

* Allow style names to be mapped by prefix. For instance:

      r[style-name^='Code '] => code

* Add default style mappings for Heading 5 and Heading 6.

* Allow escape sequences in style IDs, style names and CSS class names.

* Allow a separator to be specified when HTML elements are collapsed.

* Add includeEmbeddedStyleMap option to allow embedded style maps to be
  disabled.

* Include embedded styles when explicit style map is passed.

# 1.2.5

* Ignore bold, italic, underline and strikethrough elements that have a value of
  false or 0.

# 1.2.4

* Ignore v:imagedata elements without relationship ID with warning.

# 1.2.3

* Expect end token when parsing style mappings. This causes warnings to be
  emitted instead of silenting ignoring unparsed tokens.

# 1.2.2

* Ignore blank lines in style map.

# 1.2.1
