@@ -297,7 +297,8 @@ function BodyReader(options) {
         "wp:inline": readDrawingElement,
         "wp:anchor": readDrawingElement,
         "v:imagedata": readImageData,
-        "v:group": readChildElements
+        "v:group": readChildElements,
+        "v:rect": readChildElements
     };
     
     return {
